--- a/app/src/main/res/layout/activity_main_e1.xml
+++ b/app/src/main/res/layout/activity_main_e1.xml
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:id="@+id/banner_E1"
+            android:id="@+id/img_banner_E1"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/header_height"
             android:scaleType="centerCrop"
@@ -22,7 +22,7 @@
 
 
         <TextView
-            android:id="@+id/questionsQty"
+            android:id="@+id/tv_questions_qty_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_M"
@@ -62,12 +62,12 @@
                 android:textSize="@dimen/text_M" />
 
             <RadioGroup
-                android:id="@+id/question_E1"
+                android:id="@+id/rg_question_E1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE1_1"
+                    android:id="@+id/rb_qE1_option_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -76,7 +76,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE1_2"
+                    android:id="@+id/rb_qE1_option_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -85,7 +85,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE1_3"
+                    android:id="@+id/rb_qE1_option_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -94,7 +94,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE1_4"
+                    android:id="@+id/rb_qE1_option_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -132,7 +132,7 @@
                 android:textSize="@dimen/text_M" />
 
             <EditText
-                android:id="@+id/question_E2"
+                android:id="@+id/et_question_E2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_S"
@@ -175,12 +175,12 @@
                 android:textSize="@dimen/text_M" />
 
             <RadioGroup
-                android:id="@+id/question_E3"
+                android:id="@+id/rg_question_E3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE3_1"
+                    android:id="@+id/rb_qE3_option_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -189,7 +189,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE3_2"
+                    android:id="@+id/rb_qE3_option_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -198,7 +198,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE3_3"
+                    android:id="@+id/rb_qE3_option_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -247,7 +247,7 @@
                 android:textSize="@dimen/text_M" />
 
             <CheckBox
-                android:id="@+id/qE4_1"
+                android:id="@+id/cb_qE4_option_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_M"
@@ -256,7 +256,7 @@
                 android:textSize="@dimen/text_M" />
 
             <CheckBox
-                android:id="@+id/qE4_2"
+                android:id="@+id/cb_qE4_option_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_M"
@@ -265,7 +265,7 @@
                 android:textSize="@dimen/text_M" />
 
             <CheckBox
-                android:id="@+id/qE4_3"
+                android:id="@+id/cb_qE4_option_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_M"
@@ -274,7 +274,7 @@
                 android:textSize="@dimen/text_M" />
 
             <CheckBox
-                android:id="@+id/qE4_4"
+                android:id="@+id/cb_qE4_option_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_M"
@@ -283,7 +283,7 @@
                 android:textSize="@dimen/text_M" />
 
             <CheckBox
-                android:id="@+id/qE4_5"
+                android:id="@+id/cb_qE4_option_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_M"
@@ -320,12 +320,12 @@
                 android:textSize="@dimen/text_M" />
 
             <RadioGroup
-                android:id="@+id/question_E5"
+                android:id="@+id/rg_question_E5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/qE5_1"
+                    android:id="@+id/rb_qE5_option_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -334,7 +334,7 @@
                     android:textSize="@dimen/text_M" />
 
                 <RadioButton
-                    android:id="@+id/qE5_2"
+                    android:id="@+id/rb_qE5_option_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_M"
@@ -352,7 +352,7 @@
 
 
             <Button
-                android:id="@+id/restart"
+                android:id="@+id/btn_restart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_XL"
@@ -364,7 +364,7 @@
                 android:textSize="@dimen/text_M" />
 
             <Button
-                android:id="@+id/submit"
+                android:id="@+id/btn_submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_XL"
